--- a/signin page/index.html
+++ b/signin page/index.html
@@ -7,26 +7,35 @@
     <title>Document</title>
   </head>
   <body>
-    <form>
-      <div class="inputs">
-        <h1>Sign up</h1>
-        <p>Please enter details to sign in</p>
-        <hr />
-        <label for="name"><b>Name</b></label>
-        <input type="text" placeholder="Name" required /><br />
-        <label for="phone"><b>Phone</b></label>
-        <input type="tel" placeholder="enter phone number" /><br />
-        <label for="email"><b>Email</b></label>
-        <input type="text" placeholder="Email" required /><br />
-        <label for="pwd"><b>Password</b></label>
-        <input type="password" placeholder="password" required />
-      </div>
-      <div class="btn">
-        <button type="button" class="btn-cancle">cancel</button>
-        <button type="button" class="btn-sign">Sign in</button>
-        <p></p>
-      </div>
-    </form>
+    <div class="container">
+      <h2 class="title">Registration Form</h2>
+      <form>
+        <div class="input-name">
+          <label class="txt1">Name </label>
+          <input type="text" placeholder="Full Name" class="field field-name" />
+        </div>
+        <div class="input-name">
+          <label class="txt">Phone </label>
+          <input type="text" placeholder="phone" class="field field-phone" />
+        </div>
+        <div class="input-name">
+          <label class="txt2">Email </label>
+          <input type="email" placeholder="Email" class="field field-email" />
+        </div>
+        <div class="input-name">
+          <label id="pwd">Paswd </label>
+          <input
+            type="password"
+            placeholder="password"
+            class="field field-password"
+          />
+        </div>
+        <div class="input-name">
+          <input type="button" value="Register" class="btn" />
+        </div>
+      </form>
+      <p>Existing User <a href="#">click here</a></p>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
