Login page created

--- a/signin page/login.html
+++ b/signin page/login.html
@@ -8,16 +8,8 @@
   </head>
   <body>
     <div class="container">
-      <h2 class="title">Registration Form</h2>
+      <h2 class="title">Login Form</h2>
       <form>
-        <div class="input-name">
-          <label class="txt1">Name </label>
-          <input type="text" placeholder="Full Name" class="field field-name" />
-        </div>
-        <div class="input-name">
-          <label class="txt">Phone </label>
-          <input type="text" placeholder="phone" class="field field-phone" />
-        </div>
         <div class="input-name">
           <label class="txt2">Email </label>
           <input type="email" placeholder="Email" class="field field-email" />
@@ -31,10 +23,10 @@
           />
         </div>
         <div class="input-name">
-          <input type="button" value="Register" class="btn" />
+          <input type="button" value="Login" class="btn" />
         </div>
       </form>
-      <p>Existing User <a href="login.html">click here</a></p>
+      <p>New User <a href="index.html">click here</a></p>
     </div>
     <script src="script.js"></script>
   </body>
