Validation functions connected to html page

--- a/Advance signin page/login.html
+++ b/Advance signin page/login.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="login.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Log in</title>
+    <title>Login</title>
   </head>
   <body>
     <div class="loginContainer">
@@ -34,5 +34,6 @@
         <p id="nuser">New user <a href="signup.html">click here</a></p>
       </form>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
