--- a/Advance signin page/signup.html
+++ b/Advance signin page/signup.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="signup.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Register</title>
   </head>
   <body>
     <!-- Registration Container-->
@@ -53,9 +53,6 @@
       </form>
       <p>Existing User <a href="login.html">click here</a></p>
     </div>
-    <!-- Login Container-->
-    <!-- -->
-    <!-- -->
 
     <script src="script.js"></script>
   </body>
