the validations are updated using regex

--- a/Advance signin page/signup.html
+++ b/Advance signin page/signup.html
@@ -12,25 +12,22 @@
       <h2 id="title">Registration Form</h2>
       <form name="reg" onsubmit="return register()">
         <div class="input-name">
-          <label class="name">Name </label>
           <input
             type="text"
-            placeholder="Full Name"
+            placeholder="Name"
             class="field field-name"
             name="namebox"
           />
         </div>
         <div class="input-name">
-          <label class="phone">Phone </label>
           <input
-            type="text"
-            placeholder="phone"
+            type="tel"
+            placeholder="Phone"
             class="field field-phone"
             name="phonebox"
           /><span id="numlock"></span>
         </div>
         <div class="input-name">
-          <label class="email">Email </label>
           <input
             type="email"
             placeholder="Email"
@@ -39,10 +36,9 @@
           />
         </div>
         <div class="input-name">
-          <label id="pwd">Paswd </label>
           <input
             type="password"
-            placeholder="password"
+            placeholder="Password"
             class="field field-password"
             name="pwdbox"
           />
