new on spot validation function added

--- a/Advance signin page/signup.html
+++ b/Advance signin page/signup.html
@@ -14,34 +14,38 @@
         <div class="input-name">
           <input
             type="text"
-            placeholder="Name"
+            placeholder=" Name"
             class="field field-name"
-            name="namebox"
+            name="name"
           />
+          <p>Enter username with 1-50 characters</p>
         </div>
         <div class="input-name">
           <input
             type="tel"
-            placeholder="Phone"
+            placeholder=" Phone"
             class="field field-phone"
-            name="phonebox"
-          /><span id="numlock"></span>
+            name="phone"
+          />
+          <p>Enter your phone number(10-15) characters</p>
         </div>
         <div class="input-name">
           <input
             type="email"
-            placeholder="Email"
+            placeholder=" Email"
             class="field field-email"
-            name="emailbox"
+            name="email"
           />
+          <p>Enter your email address</p>
         </div>
         <div class="input-name">
           <input
             type="password"
-            placeholder="Password"
+            placeholder=" Password"
             class="field field-password"
-            name="pwdbox"
+            name="pwd"
           />
+          <p>enter your password</p>
         </div>
         <div class="input-name">
           <input type="button" value="Register" class="btn" id="regButton" />
